--- a/az_hb_2808/az_state_prison_model_inputs.yaml
+++ b/az_hb_2808/az_state_prison_model_inputs.yaml
@@ -3,24 +3,24 @@ user_inputs:
   policy_year: 2020
   start_year: 2016
   projection_years: 10
+  speed_run: true
 
 model_architecture:
     pre-trial: null
     prison: incarcerated
     release: released
 
-reference_date: 2015
+reference_date: 2020
 
 time_step: 1
 
 disaggregation_axes:
   - crime_type
-  - is_violent
 
 state_data: ../state/ex_state/preprocessed_data_ex_state_prison.csv
 
 per_ts_costs:
-  prison: 22166.45
+  prison: 25962.45
   release: 0
 
 micro_simulation: false
